--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -2,19 +2,19 @@
 # https://github.com/firebase/firebase-tools
 
 name: Deploy to Firebase Hosting on merge
-'on':
+"on":
   push:
     branches:
       - main
 env:
   VITE_API_KEY: ${{secrets.API_KEY}}
-  VITE_AUTH_DOMAIN : ${{secrets.AUTH_DOMAIN}}
-  VITE_PROJECT_ID : ${{secrets.PROJECT_ID}}
-  VITE_STORAGE_BUCKET : ${{secrets.STORAGE_BUCKET}}
-  VITE_MESSAGING_SENDER_ID : ${{secrets.MESSAGING_SENDER_ID}}
-  VITE_APP_ID : ${{secrets.APP_ID}}
-  VITE_MEASUREMENT_ID : ${{secrets.MEASUREMENT_ID}}
-  
+  VITE_AUTH_DOMAIN: ${{secrets.AUTH_DOMAIN}}
+  VITE_PROJECT_ID: ${{secrets.PROJECT_ID}}
+  VITE_STORAGE_BUCKET: ${{secrets.STORAGE_BUCKET}}
+  VITE_MESSAGING_SENDER_ID: ${{secrets.MESSAGING_SENDER_ID}}
+  VITE_APP_ID: ${{secrets.APP_ID}}
+  VITE_MEASUREMENT_ID: ${{secrets.MEASUREMENT_ID}}
+
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
@@ -23,7 +23,7 @@ jobs:
       - run: npm ci && npm run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
-          repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_WORLDWIDE_CHAT_46374 }}'
+          repoToken: "${{ secrets.GITHUB_TOKEN }}"
+          firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_WORLDWIDE_CHAT_46374 }}"
           channelId: live
           projectId: worldwide-chat-46374
